tests/invalid/literal_numbers.m
1.2.3

%%%%%%%%%%

123e67.8
